Fix overlapping extra borders on small view tabs.

--- a/src/plugins/tabs/_screen-sm-max.scss
+++ b/src/plugins/tabs/_screen-sm-max.scss
@@ -9,7 +9,10 @@
 %tabs-screen-sm-max-backwards-compat {
 	> {
 		details {
+			border: 0;
 			border-bottom: $tablist-screen-sm-seperator-border-color $tablist-screen-sm-seperator-border-style $tablist-screen-sm-seperator-border-width;
+			border-bottom-left-radius: 0;
+			border-bottom-right-radius: 0;
 
 			&:last-of-type {
 				border-bottom: 0;
@@ -19,9 +22,16 @@
 				min-height: 0 !important;
 			}
 
+			> {
+				summary {
+					border: 0;
+				}
+			}
+
 			&[open] {
 				> {
 					summary {
+						border: 0;
 						margin-bottom: 0;
 					}
 				}
